src2/objects/Pricebook2.object
<CustomObject>
    <fields>
        <fullName>Catalog_Prefix__c</fullName>
        <label>Catalog Prefix</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Catalog_UUID__c</fullName>
        <externalId>true</externalId>
        <label>Catalog external ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <label>Channel</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Channel</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Org_Code__c</fullName>
        <label>Sales Organization Code</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Sales_Organization</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Org__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Organization</label>
        <referenceTo>Sales_Org__c</referenceTo>
        <relationshipLabel>Price Books</relationshipLabel>
        <relationshipName>Price_Books</relationshipName>
        <type>Lookup</type>
    </fields>
    <sharingModel>ReadSelect</sharingModel>
</CustomObject>